--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Amrit Mazumder - Resume</title>
+    	<title>Amrit Mazumder - Resume Git</title>
         <link rel='stylesheet' type='text/css' href='resume_style.css'/>
 		<link type="text/css" rel="stylesheet" href="http://fast.fonts.com/cssapi/6eeca118-1406-41bb-8907-ea4709690d3f.css"/>
 		<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
